# hunter_se

./: .gitignore  README.md  RL_DEPLOYMENT_ROADMAP.md  RL_IMPLEMENTATION_COMPLETE.md  RL_IMPLEMENTATION_PLAN.md  diff_to_ack.md  new_run_commands.md  resilient-finding-moon.md  run_commands.md
src/hunter_se_rl/: package.xml  setup.cfg  setup.py
src/hunter_se_rl/hunter_se_rl/: __init__.py  hunter_se_env.py  test_policy.py  train_td3.py
src/hunter_se_rl/launch/: training.launch.py
src/scout_rl/: package.xml  setup.cfg  setup.py
src/scout_rl/config/: training_config.yaml
src/scout_rl/launch/: training.launch.py
src/scout_rl/scout_rl/: __init__.py  gazebo_interface.py  scout_env.py  test_policy.py  train_td3.py  utils.py
ugv_gazebo_sim/hunter_se/hunter_se_description/: CMakeLists.txt  package.xml
ugv_gazebo_sim/hunter_se/hunter_se_description/rviz/: hunter_se.rviz
ugv_gazebo_sim/hunter_se/hunter_se_description/urdf/: hunter_se.xacro  lidar_3d.xacro
ugv_gazebo_sim/hunter_se/hunter_se_gazebo_sim/: CMakeLists.txt  package.xml
ugv_gazebo_sim/hunter_se/hunter_se_gazebo_sim/config/: hunter_se_bridge_ros_gz.yaml
ugv_gazebo_sim/hunter_se/hunter_se_gazebo_sim/launch/: hunter_se_robot_state_publisher.launch.py  hunter_se_simulation.launch.py  spawn_hunter_se.launch.py
ugv_gazebo_sim/hunter_se/hunter_se_gazebo_sim/worlds/: obstacles_easy.world
